<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="U_OpcuaError" Id="{eadb0472-ffd8-48bf-aa7d-6f4e9344e857}">
    <Declaration><![CDATA[TYPE U_OpcuaError :
UNION
	Value	: UINT;
	Bits	: ST_OpcuaStatusError;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>